<resources>
    <string name="app_name">Android Big Project</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="title">标题</string>
    <string name="save">保存</string>
    <string name="content">正文</string>
    <string name="deadline">到期时间:</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="remindingBefore">提醒：</string>
    <string name="remindingAfter">天提醒</string>
</resources>
