<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/dialog"
              android:layout_marginTop="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="center">


        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remindingBefore"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="10dp"/>
        <Spinner
            android:id="@+id/remindingTimeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remindingAfter"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>